src/main/java/xpr/XPRParser.java
// Generated from XPR.g4 by ANTLR 4.5.1
package xpr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XPRParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            LITERAL = 1, COMMA = 2, SEMICOLON = 3, CRLF = 4, COLON = 5, REQUIRE = 6, END = 7, DEF = 8,
            RETURN = 9, PIR = 10, NEW = 11, DEL = 12, VPRE = 13, VNUM = 14, VALIDATE = 15, BELONG = 16,
            HAS_MANY = 17, DEP = 18, DESTROY = 19, CLAS = 20, PARENT = 21, PUT = 22, SELF = 23,
            SAVE = 24, TRANS = 25, DO = 26, VGE = 27, VGT = 28, VLE = 29, VLT = 30, FALSE = 31, TRUE = 32,
            IF = 33, ELSE = 34, ELSIF = 35, UNLESS = 36, WHILE = 37, RETRY = 38, BREAK = 39, FOR = 40,
            PLUS = 41, MINUS = 42, MUL = 43, DIV = 44, MOD = 45, EXP = 46, EQUAL = 47, NOT_EQUAL = 48,
            GREATER = 49, LESS = 50, LESS_EQUAL = 51, GREATER_EQUAL = 52, ASSIGN = 53, PLUS_ASSIGN = 54,
            MINUS_ASSIGN = 55, MUL_ASSIGN = 56, DIV_ASSIGN = 57, MOD_ASSIGN = 58, EXP_ASSIGN = 59,
            BIT_AND = 60, BIT_OR = 61, BIT_XOR = 62, BIT_NOT = 63, BIT_SHL = 64, BIT_SHR = 65,
            AND = 66, OR = 67, NOT = 68, DOT = 69, LEFT_RBRACKET = 70, RIGHT_RBRACKET = 71, LEFT_SBRACKET = 72,
            RIGHT_SBRACKET = 73, NIL = 74, SL_COMMENT = 75, ML_COMMENT = 76, WS = 77, INT = 78,
            FLOAT = 79, ID = 80, ID_GLOBAL = 81, ID_FUNCTION = 82;
    public static final int
            RULE_prog = 0, RULE_class_definition = 1, RULE_class_declaration = 2,
            RULE_class_name = 3, RULE_class_body = 4, RULE_expression = 5, RULE_put_statement = 6,
            RULE_global_get = 7, RULE_global_set = 8, RULE_global_result = 9, RULE_function_inline_call = 10,
            RULE_require_block = 11, RULE_pir_inline = 12, RULE_pir_expression_list = 13,
            RULE_function_definition = 14, RULE_function_definition_body = 15, RULE_trans_statement = 16,
            RULE_function_definition_header = 17, RULE_function_name = 18, RULE_function_definition_params = 19,
            RULE_function_definition_params_list = 20, RULE_function_definition_param_id = 21,
            RULE_new_statement = 22, RULE_remove_statement = 23, RULE_arguments = 24,
            RULE_validate_presence = 25, RULE_validate_num = 26, RULE_cond_num = 27,
            RULE_belong_statement = 28, RULE_has_many_statement = 29, RULE_del_expr = 30,
            RULE_return_statement = 31, RULE_save_statement = 32, RULE_function_call = 33,
            RULE_function_call_param_list = 34, RULE_function_call_params = 35, RULE_function_param = 36,
            RULE_function_unnamed_param = 37, RULE_function_named_param = 38, RULE_function_call_assignment = 39,
            RULE_all_result = 40, RULE_elsif_statement = 41, RULE_if_elsif_statement = 42,
            RULE_if_statement = 43, RULE_unless_statement = 44, RULE_while_statement = 45,
            RULE_for_statement = 46, RULE_init_expression = 47, RULE_all_assignment = 48,
            RULE_for_init_list = 49, RULE_cond_expression = 50, RULE_loop_expression = 51,
            RULE_for_loop_list = 52, RULE_statement_body = 53, RULE_statement_expression_list = 54,
            RULE_assignment = 55, RULE_primary_expr = 56, RULE_dynamic_assignment = 57,
            RULE_int_assignment = 58, RULE_int_plus = 59, RULE_int_minus = 60, RULE_float_assignment = 61,
            RULE_string_assignment = 62, RULE_initial_array_assignment = 63, RULE_array_assignment = 64,
            RULE_array_definition = 65, RULE_array_definition_elements = 66, RULE_array_selector = 67,
            RULE_dynamic_result = 68, RULE_dynamic = 69, RULE_int_result = 70, RULE_float_result = 71,
            RULE_string_result = 72, RULE_comparison_list = 73, RULE_nil_check = 74,
            RULE_comparison = 75, RULE_comp_var = 76, RULE_lvalue = 77, RULE_rvalue = 78,
            RULE_break_expression = 79, RULE_literal_t = 80, RULE_float_t = 81, RULE_int_t = 82,
            RULE_bool_t = 83, RULE_nil_t = 84, RULE_id = 85, RULE_id_global = 86,
            RULE_id_function = 87, RULE_terminator = 88, RULE_else_token = 89, RULE_crlf = 90;
    public static final String[] ruleNames = {
            "prog", "class_definition", "class_declaration", "class_name", "class_body",
            "expression", "put_statement", "global_get", "global_set", "global_result",
            "function_inline_call", "require_block", "pir_inline", "pir_expression_list",
            "function_definition", "function_definition_body", "trans_statement",
            "function_definition_header", "function_name", "function_definition_params",
            "function_definition_params_list", "function_definition_param_id", "new_statement",
            "remove_statement", "arguments", "validate_presence", "validate_num",
            "cond_num", "belong_statement", "has_many_statement", "del_expr", "return_statement",
            "save_statement", "function_call", "function_call_param_list", "function_call_params",
            "function_param", "function_unnamed_param", "function_named_param", "function_call_assignment",
            "all_result", "elsif_statement", "if_elsif_statement", "if_statement",
            "unless_statement", "while_statement", "for_statement", "init_expression",
            "all_assignment", "for_init_list", "cond_expression", "loop_expression",
            "for_loop_list", "statement_body", "statement_expression_list", "assignment",
            "primary_expr", "dynamic_assignment", "int_assignment", "int_plus", "int_minus",
            "float_assignment", "string_assignment", "initial_array_assignment", "array_assignment",
            "array_definition", "array_definition_elements", "array_selector", "dynamic_result",
            "dynamic", "int_result", "float_result", "string_result", "comparison_list",
            "nil_check", "comparison", "comp_var", "lvalue", "rvalue", "break_expression",
            "literal_t", "float_t", "int_t", "bool_t", "nil_t", "id", "id_global",
            "id_function", "terminator", "else_token", "crlf"
    };

    private static final String[] _LITERAL_NAMES = {
            null, null, "','", "';'", null, "':'", "'require'", "'end'", "'def'",
            "'return'", "'pir'", "'new'", null, "'validates_presence_of'", "'validates_numericality_of'",
            "'validates'", "'belongs_to'", "'has_many'", "'dependent:'", "':destroy'",
            "'class'", "'ApplicationRecord'", "'puts'", "'self'", "'save!'", "'transaction'",
            "'do'", "'greater_than_or_equal_to:'", "'greater_than:'", "'less_than_or_equal_to:'",
            "'less_than:'", "'false'", "'true'", "'if'", "'else'", "'elsif'", "'unless'",
            "'while'", "'retry'", "'break'", "'for'", "'+'", "'-'", "'*'", "'/'",
            "'%'", "'**'", "'=='", "'!='", "'>'", "'<'", "'<='", "'>='", "'='", "'+='",
            "'-='", "'*='", "'/='", "'%='", "'**='", "'&'", "'|'", "'^'", "'~'", "'<<'",
            "'>>'", null, null, null, "'.'", "'('", "')'", "'['", "']'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, "LITERAL", "COMMA", "SEMICOLON", "CRLF", "COLON", "REQUIRE", "END",
            "DEF", "RETURN", "PIR", "NEW", "DEL", "VPRE", "VNUM", "VALIDATE", "BELONG",
            "HAS_MANY", "DEP", "DESTROY", "CLAS", "PARENT", "PUT", "SELF", "SAVE",
            "TRANS", "DO", "VGE", "VGT", "VLE", "VLT", "FALSE", "TRUE", "IF", "ELSE",
            "ELSIF", "UNLESS", "WHILE", "RETRY", "BREAK", "FOR", "PLUS", "MINUS",
            "MUL", "DIV", "MOD", "EXP", "EQUAL", "NOT_EQUAL", "GREATER", "LESS", "LESS_EQUAL",
            "GREATER_EQUAL", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "MUL_ASSIGN",
            "DIV_ASSIGN", "MOD_ASSIGN", "EXP_ASSIGN", "BIT_AND", "BIT_OR", "BIT_XOR",
            "BIT_NOT", "BIT_SHL", "BIT_SHR", "AND", "OR", "NOT", "DOT", "LEFT_RBRACKET",
            "RIGHT_RBRACKET", "LEFT_SBRACKET", "RIGHT_SBRACKET", "NIL", "SL_COMMENT",
            "ML_COMMENT", "WS", "INT", "FLOAT", "ID", "ID_GLOBAL", "ID_FUNCTION"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "XPR.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public XPRParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ProgContext extends ParserRuleContext {
        public List<Class_definitionContext> class_definition() {
            return getRuleContexts(Class_definitionContext.class);
        }

        public Class_definitionContext class_definition(int i) {
            return getRuleContext(Class_definitionContext.class, i);
        }

        public List<TerminatorContext> terminator() {
            return getRuleContexts(TerminatorContext.class);
        }

        public TerminatorContext terminator(int i) {
            return getRuleContext(TerminatorContext.class, i);
        }

        public ProgContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_prog;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XPRListener) ((XPRListener) listener).enterProg(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XPRListener) ((XPRListener) listener).exitProg(this);
        }
    }

    public final ProgContext prog() throws RecognitionException {
        ProgContext _localctx = new ProgContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_prog);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(191);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == CLAS) {
                    {
                        {
                            setState(182);
                            class_definition();
                            setState(186);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            while (_la == SEMICOLON || _la == CRLF) {
                                {
                                    {
                                        setState(183);
                                        terminator(0);
                                    }
                                }
                                setState(188);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            }
                        }
                    }
                    setState(193);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Class_definitionContext extends ParserRuleContext {
        public Class_declarationContext class_declaration() {
            return getRuleContext(Class_declarationContext.class, 0);
        }

        public Class_bodyContext class_body() {
            return getRuleContext(Class_bodyContext.class, 0);
        }

        public TerminalNode END() {
            return getToken(XPRParser.END, 0);
        }

        public Class_definitionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_class_definition;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XPRListener) ((XPRListener) listener).enterClass_definition(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XPRListener) ((XPRListener) listener).exitClass_definition(this);
        }
    }

    public final Class_definitionContext class_definition() throws RecognitionException {
        Class_definitionContext _localctx = new Class_definitionContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_class_definition);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(194);
                class_declaration();
                setState(195);
                class_body();
                setState(196);
                match(END);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Class_declarationContext extends ParserRuleContext {
        public TerminalNode CLAS() {
            return getToken(XPRParser.CLAS, 0);
        }

        public Class_nameContext class_name() {
            return getRuleContext(Class_nameContext.class, 0);
        }

        public TerminalNode LESS() {
            return getToken(XPRParser.LESS, 0);
        }

        public TerminalNode PARENT() {
            return getToken(XPRParser.PARENT, 0);
        }

        public List<CrlfContext> crlf() {
            return getRuleContexts(CrlfContext.class);
        }

        public CrlfContext crlf(int i) {
            return getRuleContext(CrlfContext.class, i);
        }

        public Class_declarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_class_declaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XPRListener) ((XPRListener) listener).enterClass_declaration(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XPRListener) ((XPRListener) listener).exitClass_declaration(this);
        }
    }

    public final Class_declarationContext class_declaration() throws RecognitionException {
        Class_declarationContext _localctx = new Class_declarationContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_class_declaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(198);
                match(CLAS);
                setState(199);
                class_name();
                setState(200);
                match(LESS);
                setState(201);
                match(PARENT);
                setState(203);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(202);
                            crlf();
                        }
                    }
                    setState(205);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == CRLF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Class_nameContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(XPRParser.ID, 0);
        }

        public Class_nameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_class_name;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XPRListener) ((XPRListener) listener).enterClass_name(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XPRListener) ((XPRListener) listener).exitClass_name(this);
        }
    }

    public final Class_nameContext class_name() throws RecognitionException {
        Class_nameContext _localctx = new Class_nameContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_class_name);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(207);
                match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Class_bodyContext extends ParserRuleContext {
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }

        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }

        public List<TerminatorContext> terminator() {
            return getRuleContexts(TerminatorContext.class);
        }

        public TerminatorContext terminator(int i) {
            return getRuleContext(TerminatorContext.class, i);
        }

        public Class_bodyContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_class_body;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XPRListener) ((XPRListener) listener).enterClass_body(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XPRListener) ((XPRListener) listener).exitClass_body(this);
        }
    }

    public final Class_bodyContext class_body() throws RecognitionException {
        Class_bodyContext _localctx = new Class_bodyContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_class_body);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(217);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LITERAL) | (1L << REQUIRE) | (1L << DEF) | (1L << RETURN) | (1L << PIR) | (1L << VPRE) | (1L << VNUM) | (1L << BELONG) | (1L << HAS_MANY) | (1L << PUT) | (1L << SELF) | (1L << FALSE) | (1L << TRUE) | (1L << IF) | (1L << UNLESS) | (1L << WHILE) | (1L << FOR) | (1L << BIT_NOT))) != 0) || ((((_la - 68)) & ~0x3f) == 0 && ((1L << (_la - 68)) & ((1L << (NOT - 68)) | (1L << (LEFT_RBRACKET - 68)) | (1L << (NIL - 68)) | (1L << (INT - 68)) | (1L << (FLOAT - 68)) | (1L << (ID - 68)) | (1L << (ID_GLOBAL - 68)) | (1L << (ID_FUNCTION - 68)))) != 0)) {
                    {
                        {
                            setState(209);
                            expression();
                            setState(211);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            do {
                                {
                                    {
                                        setState(210);
                                        terminator(0);
                                    }
                                }
                                setState(213);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            } while (_la == SEMICOLON || _la == CRLF);
                        }
                    }
                    setState(219);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExpressionContext extends ParserRuleContext {
        public Function_definitionContext function_definition() {
            return getRuleContext(Function_definitionContext.class, 0);
        }

        public Function_inline_callContext function_inline_call() {
            return getRuleContext(Function_inline_callContext.class, 0);
        }

        public Require_blockContext require_block() {
            return getRuleContext(Require_blockContext.class, 0);
        }

        public If_statementContext if_statement() {
            return getRuleContext(If_statementContext.class, 0);
        }

        public Unless_statementContext unless_statement() {
            return getRuleContext(Unless_statementContext.class, 0);
        }

        public RvalueContext rvalue() {
            return getRuleContext(RvalueContext.class, 0);
        }

        public Return_statementContext return_statement() {
            return getRuleContext(Return_statementContext.class, 0);
        }

        public While_statementContext while_statement() {
            return getRuleContext(While_statementContext.class, 0);
        }

        public For_statementContext for_statement() {
            return getRuleContext(For_statementContext.class, 0);
        }

        public Pir_inlineContext pir_inline() {
            return getRuleContext(Pir_inlineContext.class, 0);
        }

        public Validate_presenceContext validate_presence() {
            return getRuleContext(Validate_presenceContext.class, 0);
        }

        public Validate_numContext validate_num() {
            return getRuleContext(Validate_numContext.class, 0);
        }

        public Belong_statementContext belong_statement() {
            return getRuleContext(Belong_statementContext.class, 0);
        }
